File Paths & Viewport fixes
Added the PHP path code to the static images on the theme. Added the
viewport code to the php front page to enable mobile responsiveness.

--- a/css/master.css
+++ b/css/master.css
@@ -6,10 +6,11 @@ _______________________________*/
 /* Font import */
 
 
+/* Bootstrap */
+@import url("bootstrap.min.css");
+
+
+
+
 /* Overides and custom */
 @import url("nav.css");
-
-
-/* Bootstrap Styles */
-@import url("c/bootstrap.css");
-@import url("css/bootstrap-theme.css");
