--- a/css/nav.css
+++ b/css/nav.css
@@ -2,9 +2,43 @@ body {
   min-height: 2000px;
   padding-top: 70px;
 }
+
+/*div{
+  outline: 1px dotted red;
+}*/
+
+/* Logos
+________________________________ */
+.nav-rcl-logo {
+    height: auto;
+    width: 235px;
+}
+
+.nav-uofr-logo{
+  height: auto;
+  width: 184px;
+}
+
+.rcl-nav{
+  top: 30px;
+}
+
+.uofr-nav{
+  background-color: #021E47;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  height: 30px;
+  padding: 4px;
+}
+
+/* Nav Bar overides
+________________________________ */
+
 .navbar-default {
     background-color: #234B87;
     border: none;
+    top:30px;
 }
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
     color: #FFF;
@@ -51,4 +85,62 @@ body {
 .navbar-default .navbar-nav > .open > a:focus {
   color: #FFF;
   background-color: #1f66d3;
+}
+
+/* Navbar toggle */
+.navbar-toggle {
+  position: relative;
+  float: right;
+  padding: 9px 10px;
+  margin-top: 8px;
+  margin-right: 15px;
+  margin-bottom: 8px;
+  background-color: transparent;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+.navbar-toggle:focus {
+  outline: 0;
+}
+.navbar-toggle .icon-bar {
+  display: block;
+  width: 22px;
+  height: 2px;
+  border-radius: 1px;
+}
+.navbar-toggle .icon-bar + .icon-bar {
+  margin-top: 4px;
+}
+
+
+
+/* jumbotron
+________________________________ */
+
+.jumbotron {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+  color: inherit;
+  background: none;
+}
+.jumbotron h1,
+.jumbotron .h1 {
+  color: inherit;
+}
+.jumbotron p {
+  margin-bottom: 15px;
+  font-size: 21px;
+  font-weight: 200;
+}
+.jumbotron > hr {
+  border-top-color: #d5d5d5;
+}
+.container .jumbotron,
+.container-fluid .jumbotron {
+  border-radius: 6px;
+}
+.jumbotron .container {
+  max-width: 100%;
 }
