UofR portion, README module updates

--- a/css/colors.css
+++ b/css/colors.css
@@ -20,8 +20,9 @@ EX: Top navigation bar
 */
 
 /* RCL Colors */
-.rclblue                {color: #234b87}
-.rcl-text-blue          {color: #71a8fc}
+.rclblue                {color: #234b87;}
+.rcl-text-blue          {color: #71a8fc;}
+.rcl-overblue-muted     {color: #c4dbff;}
 
 
-.uofrblue               {color: #021e47}
+.uofrblue               {color: #021e47;}
