--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,6 @@ sub-theme.
 
 /* 3. COLORS - Site colors */
 @import url("colors.css");
+
+/* 3. LANDING PAGE VIDEO - Site colors */
+@import url("landingpage-video.css");
