--- a/css/landingpage-video.css
+++ b/css/landingpage-video.css
@@ -15,8 +15,14 @@ video {
   background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg') no-repeat; background-size: cover;  -webkit-transition: 1s opacity; transition: 1s opacity;
 }
 
+.bg-color{
+  background-color: black;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
+
 
 @media all and (max-device-width: 800px) {
-  body { background: url("") #000 no-repeat center center fixed; background-size: cover; }
-  #bgvid, #polina button { display: none; }
+  /*body { background: url("") #000 no-repeat center center fixed; background-size: cover; }*/
 }
