Chat online/offline toggle, Register button open/closed toggle
Added javascript and CSS to automatically change chat in the nav and
change the button for events if registration is closed or additional
reg information is needed.

--- a/css/nav.css
+++ b/css/nav.css
@@ -56,6 +56,13 @@ portion.
   color: #c4dbff;
 }
 
+/* Chat Online/Offline Toggle */
+
+.chat-offline{
+  cursor: default;
+  color: #546f99!important;
+
+}
 
 
 /* OVERIDES
