--- a/css/event.css
+++ b/css/event.css
@@ -16,7 +16,14 @@
 }*/
 
 
-
+.no-registration-button {
+  /*background-color: rgba(0, 0, 0, 1);*/
+  background-color: #DE4D4E;
+  color: white;
+  border: none;
+  padding: 10px 16px;
+  /*border: 1px solid gray;*/
+}
 
 
 
@@ -80,6 +87,15 @@
 @media (max-width: 890px) {
   .event-image-push{margin-top: 70%;}
   .event-title {font-size: 45px;}
+  .no-registration-button {
+    position: fixed;
+    bottom: 0;
+    top:auto;
+    left: 0;
+    right: 0;
+    width: 100%;
+    border: none;
+  }
   .register-button .btn-lg{
     position: fixed;
     bottom: 0;
@@ -88,7 +104,8 @@
     right: 0;
     top: none;
     border-radius: 0;
-}
+    }
+
   }
   .field.field-name-field-event-cover-image.field-type-image img{
     width: 100%;
