Navigation shrink effect
Re-wrote the JS to shrink the Nav onScroll. Cut the code in half. Two
polish items left for this: 1. Add mobile “scroll” event. 2. Fix the
CSS transition. Currently it jumps rather than easing in to position.
Can’t figure out why it’s not working. May be a drupal/bootstrap
conflict. For now, moving on — Bigger fish…

--- a/css/editing.css
+++ b/css/editing.css
@@ -7,7 +7,14 @@ input#edit-title {
   height: 66px;
 }
 
-
+/* Event Cover Image Field */
+div#edit-field-event-cover-image {
+    /* border: 1px solid; */
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 25px;
+    /* background-color: #ddd; */
+}
 
 #edit-field-register
  {
