Location fixes for events

--- a/css/common.css
+++ b/css/common.css
@@ -49,37 +49,18 @@ compensate for the fixed header.*/
 
 
 
-/* ADMINIMAL MODULE CODE
-The following CSS code was written to
-specifically account for the admin
-menu from Adminimal Module. If you
-are not using that particular menu
-module then remove the following
-code until you reach "END OF AMINIMAL
-MENU MODULE CODE" */
 
-/* Fixing the header */
-/*.slicknav_menu{
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 2000;
-}*/
 
-/* Prevents the  admin bar from
-hiding fixed headers (i.e..uofrbar)
-when logged-in */
-/*body.logged-in                      {margin-top: 19px;}
-.logged-in .uofrbar                 {top: 29px;       }
-body.logged-in .navbar-fixed-top    {top: 64px;       }*/
+/*  logged-in style adjustments
+--------------------------------------- */
+body.logged-in                        {margin-top: 19px;    }
+.logged-in .uofrbar                   {top: 29px!important; }
+body.logged-in .navbar-fixed-top      {top: 64px;           }
+.logged-in .main-container.container  {margin-top: 100px;   }
+.logged-in .event-image-push          {margin-top: 550px;   }
 
-/* Pushes the menu and page down to
-account for a thicker modile admin
-menu.  */
-/*@media screen and (max-width: 1024px){
-  body.logged-in                      {margin-top: 133px;}
-  .logged-in .uofrbar                 {top: 47px;       }
-  body.logged-in .navbar-fixed-top    {top: 82px;       }
 
-}*/
-/* --- /END OF AMINIMAL MENU MODULE CODE ---*/
+@media (max-width: 890px) {
+  .logged-in .event-image-push{margin-top: 70%;}
+
+}
