--- a/css/editing.css
+++ b/css/editing.css
@@ -2,6 +2,27 @@
 
 
 
+/* Adding gray background to the
+editing screens */
+body.html.not-front.logged-in.page-node-edit.node-type-event.adminimal-menu.adminimal-frontend.menu-render-collapsed.admin-menu.bootstrap-anchors-processed {
+    background-color: #f5f5f5;
+}
+
+
+/* Styling WYSIWYG filter options.
+Sits below the WYSIWYG editor.  */
+fieldset#edit-body-und-0-format{
+  border: none;
+  background: transparent;
+  font-size: 12px;
+  /* width: 50%; */
+  color: gray;
+  }
+  select#edit-body-und-0-format--2 {
+  background: lightgray;
+  }
+
+
 input#edit-title {
   font-size: 40px;
   height: 66px;
@@ -13,7 +34,7 @@ div#edit-field-event-cover-image {
     border: 1px solid #ddd;
     border-radius: 5px;
     padding: 25px;
-    /* background-color: #ddd; */
+     background-color: #FFF;
 }
 
 #edit-field-register
@@ -24,7 +45,18 @@ div#edit-field-event-cover-image {
     background-color: #fff9dd;
 }
 
-.cke_editable {
-    font-size: 18px;
-    line-height: 1.3;
+.messages-overlay{
+  position: absolute;
+  top: 100px;
+  left: 0;
+  right: 0;
+  width: 80%;
+  margin: auto;
+}
+
+/* Pushing tabs on event
+edit screen down so not
+covered by menu. */
+.logged-in .tab-container {
+    margin-top: 20px;
 }
