--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,6 @@ sub-theme.
 
 /* 6. NEWS AND EVENTS FEED */
 @import url("news-feed.css");
+
+/* 7. ARTICLE PAGE: News, Blog Post, Story */
+@import url("article.css");
