--- a/css/landingpage-video.css
+++ b/css/landingpage-video.css
@@ -1,4 +1,24 @@
 
+
+.under-const-bg-image{
+    position: fixed;
+    top: 0;
+    background: url("../images/lam-sq-graphic.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+}
+
+.jumbotron{
+  margin-top: 100px;
+  text-align: center;
+  background: none;
+  color: white;
+}
+
 video {
   position: fixed;
   top: 50%;
