--- a/css/landingpage-video.css
+++ b/css/landingpage-video.css
@@ -1,6 +1,42 @@
 
 
-.under-const-bg-image{
+.under-cons-message{
+  position: relative;
+  bottom: 50px;
+}
+
+.hp-cover img{
+  position: absolute;
+  width: 100%;
+  z-index: -1000;
+  height: auto;
+  top: -15px;
+  left: 0;
+  right: 0;
+}
+
+.hp-content-feed {
+  margin-top: 45%;
+  padding: 70px 60px 30px 60px;
+  width:100%;
+  margin-left: 0;
+  margin-right: 0;
+  /* For Safari 5.1 to 6.0 */
+  /*background: -webkit-linear-gradient(top, rgba(255, 255, 255, 1), rgba(255, 255, 255,1),rgba(0, 0, 0, 0.0))
+      , url('carlson-3.jpg');*/
+  /* For Opera 11.1 to 12.0 */
+  /*background: -o-linear-gradient(top, rgba(255, 255, 255, 1), rgba(255, 255, 255,1),rgba(0, 0, 0, 0.0))
+      , url('carlson-3.jpg');*/
+  /* For Firefox 3.6 to 15 */
+  /*background: -moz-linear-gradient(top, rgba(255, 255, 255, 1), rgba(255, 255, 255,1),rgba(0, 0, 0, 0.0))
+      , url('carlson-3.jpg');*/
+  /* Standard syntax (must be last) */
+  /*background: linear-gradient(to top, rgba(255, 255, 255, 1), rgba(255, 255, 255,1),rgba(0, 0, 0, 0.0))
+      , url('carlson-3.jpg');*/
+}
+
+
+/*.under-const-bg-image{
     position: fixed;
     top: 0;
     background: url("../images/lam-sq-graphic.jpg") no-repeat center center fixed;
@@ -10,16 +46,16 @@
     background-size: cover;
     height: 100%;
     width: 100%;
-}
+}*/
 
-.jumbotron{
+/*.jumbotron{
   margin-top: 100px;
   text-align: center;
   background: none;
   color: white;
-}
+}*/
 
-video {
+/*video {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -33,16 +69,19 @@ video {
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
   background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg') no-repeat; background-size: cover;  -webkit-transition: 1s opacity; transition: 1s opacity;
-}
+}*/
 
-.bg-color{
+/*.bg-color{
   background-color: black;
   height: 100vh;
   width: 100vw;
   overflow: hidden;
-}
+}*/
 
 
-@media all and (max-device-width: 800px) {
-  /*body { background: url("") #000 no-repeat center center fixed; background-size: cover; }*/
+@media all and (max-device-width: 768px) {
+  .news-events-thumb-row {
+      width: 100%;
+      margin: auto;
+  }
 }
