--- a/css/news-feed.css
+++ b/css/news-feed.css
@@ -10,13 +10,18 @@
 }
 
 .news-events-thumb-row {
-    border: 1px solid lightgray;
+    /*border-bottom: 1px solid lightgray;*/
     margin: 10px;
-    width: 48%;
+    width: 100%;
     float: left;
-    padding: 10px;
+    padding: 5px;
 }
 
 .event-title-thumb {
     font-size: 27px;
+}
+
+@media (max-width: 768px) {
+  .news-events-thumb-row {width: 100%;margin: auto;}
+  .hp-content-feed{padding: 70px 15px 30px 15px;}
 }
