TPL Suggestions README

--- a/css/common.css
+++ b/css/common.css
@@ -38,9 +38,9 @@ body {
 
 /* Pushing the main content down to
 compensate for the fixed header.*/
-.main-container.container {
+/*.main-container.container {
     margin-top: 100px;
-}
+}*/
 
 .content {
     font-size: 17px;
@@ -56,7 +56,7 @@ compensate for the fixed header.*/
 body.logged-in                        {margin-top: 19px;    }
 .logged-in .uofrbar                   {top: 29px!important; }
 body.logged-in .navbar-fixed-top      {top: 64px;           }
-.logged-in .main-container.container  {margin-top: 100px;   }
+/*.logged-in .main-container.container  {margin-top: 100px;   }*/
 .logged-in .event-image-push          {margin-top: 550px;   }
 
 
