--- a/css/nav.css
+++ b/css/nav.css
@@ -30,13 +30,13 @@ portion.
   width: 100%;
   height: 35px;
   padding: 5px;
-  position: fixed;
+  /*position: fixed;*/
   z-index: 1000;
   top: 0;
   }
-  .uofrbar.up     {
+  /*.uofrbar.up     {
   top:-35px;
-}
+}*/
 
 
 /* UofR logo in navbar */
@@ -79,7 +79,20 @@ portion.
 /* OVERIDES
 -------------------------------*/
 
-.navbar {border: none;}
+.navbar {
+  border: none;
+  border-radius: 0;
+  }
+  .navbar.fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  }
+  .logged-in .navbar.fixed {
+  top: 20px;
+  }
 
 /* Size and positioning for the
 RCL Logo */
