--- a/css/event.css
+++ b/css/event.css
@@ -62,7 +62,7 @@
 }
 
 .register-button {
-  top: 560px;
+  top: 485px;
   position: absolute;
   z-index: 300;
 }
@@ -74,12 +74,12 @@
   position: absolute;
   left: 0;
   right: 0;
-  top:80px;
+  top:0;
   z-index: -100;
 }
 
 .event-image-push{
-  margin-top: 550px;
+  margin-top: 580px;
 }
 
 .event-title {
@@ -118,14 +118,5 @@
     }
 
   }
-  .field.field-name-field-event-cover-image.field-type-image img{
-    width: 100%;
-    height: auto;
-    clip: rect(0px,5000px,560px,0px);
-    position: absolute;
-    left: 0;
-    right: 0;
-    top:80px;
-    z-index: -100;
-  }
+
 }
