--- a/css/common.css
+++ b/css/common.css
@@ -29,9 +29,7 @@ body {
   padding:0;
 }
 
-/* Adds padding to general page.tpl.php
-files */
-.general-page-push{padding-top: 20px;}
+
 
 
 /* OVERIDES
@@ -40,17 +38,14 @@ files */
 
 /* Pushing the main content down to
 compensate for the fixed header.*/
-.main-container {margin-top: 0;}
-  .main-container.pushdown {margin-top: 50px}
+/*.main-container.container {
+    margin-top: 100px;
+}*/
 
-.content {font-size: 17px;}
-
-
-.messages-overlay{
-  padding-top: 20px;
-  width: 80%;
-  margin: auto;
+.content {
+    font-size: 17px;
 }
+
 
 
 
